# spotty

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
spotty/: __init__.py  __main__.py  api.py  app.py  auth.py  cast_helper.py  librespot_bridge.py  media_keys.py  messages.py  spotifyd_manager.py  spotty.tcss  themes.py  track_cache.py
spotty/widgets/: album_tracks_overlay.py  artist_overlay.py  controls_bar.py  devices_overlay.py  help_overlay.py  home_overlay.py  liked_songs_overlay.py  lyrics_overlay.py  now_playing.py  player_panel.py  playlist_panel.py  playlist_tracks_overlay.py  playlists_overlay.py  queue_overlay.py  search_overlay.py  top_overlay.py
