[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotty"
version = "0.1.0"
description = "A Spotify TUI built with Textual"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "spotipy>=2.24.0",
    "python-dotenv>=1.0.0",
    "pillow>=11.0.0",
    "httpx>=0.27.0",
    "rich-pixels>=3.0.0",
    "textual-image>=0.12.0",
    "syncedlyrics>=0.4.0",
    "pychromecast>=14.0.0",
    "pyobjc-framework-MediaPlayer>=12.0; sys_platform == 'darwin'",
]

[project.scripts]
spotty = "spotty.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["spotty"]
